<resources>
    <string name="app_name">Financial Planning</string>
    <string name="easy_exit">Easy Exit</string>
    <string name="login">Login</string>
    <string name="user">User</string>
    <string name="facalty">Facalty</string>
    <string name="password">Password</string>
    <string name="email_id">Email Id</string>
    <string name="todo">TODO</string>
    <string name="phone">phone</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="click_here_for_help">Click Here For Help</string>
    <string name="forgot_password_reset_here">forgot password? reset here.</string>
    <string name="user_name">User Name</string>
    <string name="time_frame">Time Frame</string>
    <string name="present_cost">Present Cost</string>
    <string name="present_savings">Present Savings</string>
    <string name="calculate">Calculate</string>
    <string name="future_cost_6">Future Cost @6%</string>
    <string name="future_value_of_your_investement">Future Value Of Your Investement</string>
    <string name="hello_user_calculate_your_future_requirements">Hello user, calculate your future requirements</string>
</resources>